--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 discord.py==2.3.2
 psycopg2-binary==2.9.9
-sqlalchemy==1.4.23
-python-dotenv==0.19.0
+sqlalchemy==2.0.27
+python-dotenv==1.0.1
 openai==1.12.0
 pinecone-client==3.0.2
 sentence-transformers==2.5.1
-fastapi==0.68.1
-uvicorn==0.15.0
+fastapi==0.109.2
+uvicorn==0.27.1
 pydantic>=1.9.0,<3.0.0
 python-jose==3.3.0
 passlib==1.7.4
-python-multipart==0.0.5
-aiohttp==3.8.1 
+python-multipart==0.0.9
+aiohttp==3.9.3
+loguru==0.7.2
+tqdm==4.66.2
+urllib3<2.0.0
+requests==2.31.0
