--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 discord.py==2.3.2
 psycopg2-binary==2.9.9
 sqlalchemy==2.0.27
-python-dotenv==1.0.1
+python-dotenv==1.0.0
 openai==1.12.0
 pinecone-client==3.0.2
 sentence-transformers==2.5.1
@@ -16,3 +16,4 @@ loguru==0.7.2
 tqdm==4.66.2
 urllib3<2.0.0
 requests==2.31.0
+tweepy==4.14.0
