--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ discord.py==2.3.2
 psycopg2-binary==2.9.9
 sqlalchemy==2.0.27
 python-dotenv==1.0.0
-openai==1.12.0
+openai==1.3.0
 pinecone-client==3.0.2
 sentence-transformers==2.5.1
 fastapi==0.109.2
@@ -17,3 +17,4 @@ tqdm==4.66.2
 urllib3<2.0.0
 requests==2.31.0
 tweepy==4.14.0
+httpx==0.24.1
