--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: soul-search-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn src.api:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn src.api:app --host 0.0.0.0 --port ${PORT:-8000}
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
