--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,9 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
-      - key: DATABASE_URL
+      - key: EXTERNAL_DATABASE_URL
+        sync: false
+      - key: INTERNAL_DATABASE_URL
         sync: false
       - key: OPENAI_API_KEY
         sync: false
